# crystalball

./: .env.example  CLAUDE.md  Make Desktop Icon (Mac).command  Make Desktop Icon (Windows).bat  Play Candle Quest (Mac).command  Play Candle Quest (Windows).bat  README.md  START HERE.txt  index.html  package-lock.json  package.json  pyproject.toml  styles.css
.claude/rules/: tutoring.md
Candle Quest.app/Contents/: Info.plist
api/: feedback.js
app/: dashboard.py
cb_core/: backtest.py  exec_alpaca.py  features.py  labels.py  models.py  position.py  regimes.py
config/: broker.yml  model.yml  symbols.yml
js/: app.js  audio.js  characters.js  data.js  fx.js  game.js  sensei.js  sim.js  speech.js
launcher/: icon.icns
public/art/: README.md
scripts/: report.py  run_paper.py  run_pipeline.py
src/: App.jsx  main.jsx  store.jsx  styles.css
src/components/: NavBar.jsx  Popup.jsx  TopBar.jsx
src/engine/: analytics.js  art.js  audio.js  characters.js  data.js  fx.js  game.js  sensei.js  sim.js  speech.js
src/scenes/: LessonArt.jsx  Scenes.jsx
src/screens/: Dojo.jsx  Lesson.jsx  Playbook.jsx  Profile.jsx  Quiz.jsx  Reflect.jsx  Report.jsx  StoryMap.jsx  (+1 more)
tools/: avatar-preview.html  avatar-preview2.html  build-icons.js  clean_medallion.py  crop_final.py  crop_final_v2.py  crop_temp.py  emblem-preview.html  find_columns.py  find_columns_new.py  find_panels.py  find_panels_new.py  inspect_images.py  port-to-esm.mjs  remove_bg.py  scenechar-preview.html  test-analytics.mjs  test-analytics2.mjs  test-bread.mjs  test-bread2.mjs  test-spaced.mjs  wire-emblems.mjs
(+2 files in other folders)
